styles.css
/* ... */
/* update these when changing the left side bar width */

#canvas-wrapper-parent {
  width: calc(100% - 268px);
  height: calc(100% - 65px);
  left: 59px;
  top: 64px;
  position: absolute;
  display: table;
  background-color: rgb(243, 243, 243);
  text-align: center;
}

#canvas-wrapper {
  vertical-align: middle;
  position: relative;
  display: contents;
  overflow: auto;
}

.canvas-absolute-container {
  z-index: 2;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

#zoom-overflow-wrapper-parent {
  width: calc(100% - 269px);
  height: calc(100% - 64px);
  left: 59px;
  top: 64px;
  position: absolute;
  display: table;
  text-align: center;
  z-index: 1
}

#zoom-overflow-wrapper-inner-container {
  vertical-align: middle;
  display: contents;
  position: relative;
  overflow: auto;
}

#zoom-overflow-wrapper {
  transform: translate(-50%, -50%);
  position: absolute;
  top: 50%;
  left: 50%;
}

#stub {
  color: rgb(0,0,0,0);
  user-select: none;
  pointer-events: none;
}

table {
  border-spacing: 0;
}

td {
  padding: 0;
  width: inherit;
}

#shape-labeller-modal-options td {
  padding-top: 1px;
  padding-bottom: 1px;
  width: inherit;
}

tr {
  width: inherit;
}

tbody {
  width: inherit;
}

body {
  margin-right: 0;
  margin-left: 0;
  margin-top: 0;
}

.tools-button {
  background-color: white;
  border-style: none;
  padding: 0;
  outline: none;
  cursor: pointer;
}

.tools-button:hover {
  background-color: rgb(238, 238, 238);
}

.tools-button:active {
  /* highlight in the color of what the icon is going to be */
  background-color: lightgreen;
}

.tools-button-icon {
  padding-top: 6px;
  width: 30px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 4px;
  user-select: none;
}

/* @media only screen and (max-height: 826px) {
  .tools-button-text {
    font-size: calc(13.3333 * (100vh / 826));
  }
  .tools-button-icon {
    width: calc(40 * (100vh / (906)));
  }
}

@media only screen and (max-height: 522px) {
  .tools-button-text {
    display: none;
  }
  .tools-button-icon {
    width: calc(40 * (100vh / (806)));
  }
} */

.checkbox {
  float: right;
  margin-left: 10px;
  margin-right: 7px;
}

#settings-popup {
  position: absolute;
  border-radius: 3px;
  z-index: 3;
  background: white;
  /* padding-top: 3px;
  padding-bottom: 2px; */

   /* CHANGE THIS  */

  /* original */
  padding-top: 4px;
  padding-bottom: 1px;
  border: 1px solid grey;
  display: none;
}

@-moz-document url-prefix() {
  input.checkbox {
    margin-top: 2px;
    margin-bottom: 2px;
  }
  .format-option-popover {
    padding-top: 1.5px;
  }
  .format-option-checkbox-popover {
    margin-top: -26px;
  }

  .format-option-text-popover {
    margin-top: -27px;
  }
  #canvas-wrapper-parent {
    width: calc(100% - 268.5px);
    height: calc(100% - 63px);
    top: 63px;
  }
  #zoom-overflow-wrapper-parent {
    height: calc(100% - 63px);
    top: 63px;
  }
}

.checkbox-text {
  float: left;
  padding-left: 5px;
  user-select: none;
}

.settings-table-row-data {
  padding-top: 2px;
  padding-bottom: 3px;
  /* font-family: "Source Sans Pro", sans-serif;
  font-size: 15px; */
  /* CHANGE THIS  */

  font-family: Arial, Helvetica, sans-serif;
  font-size: 14.5px;
}

.settings-checkbox {
  cursor: pointer;
}

#title-panel {
  border: solid;
  border-top: 0;
  border-left: 0;
  border-right: 0;
  border-bottom-width: 1px;
  border-color: #80808026;
  height: 33px;
  /* height: 33px; */
  /* height: 34px; */
  background-color: white;
}

/* #title-text {
  padding-top: 3px;
  padding-left: 12px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 22px;
  float: left;
} */

/* #title-text {
  padding-top: 4px;
  padding-left: 12px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 22px;
} */

#title-text {
  padding-top: 3.5px;
  padding-left: 4px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 22px;
  float: left;
}

#title-github-mark {
  padding-top: 7px;
  padding-right: 20px;
  max-width: 22px;
  max-height: 22px;
  float: right;
  cursor: pointer;
}

#settings-table {
  padding: 2px;
}

#image-switch-parent {
  border-bottom: solid;
  border-color: rgb(197, 197, 197);
  border-width: 1px;
  background-color: white;
  margin-left: 59px;
  margin-right: 209px;
  height: 29px;
  text-align: center;
  user-select: none;
  position: relative;
}

#image-switch-contents {
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  height: 17px;
  position: absolute;
}

#current-image-name {
  display: inline-block;
  padding-left: 20px;
  padding-right: 20px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 14.7px;
  color: #adadad;
}

.image-switch-button {
  font-size: 14px;
  color: #adadad;
  cursor: default;
}

#tools-drawing-section {
  border-top: solid;
  border-bottom: solid;
  border-width: 1px;
  padding-top: 5px;
  padding-bottom: 5px;
  border-color: rgb(202, 209, 209);
}

.tools-button-hover-popup {
  margin-left: 62px;
  position: absolute;
  margin-top: -35px;
  background: black;
  color: white;
  padding-left: 6px;
  padding-right: 6px;
  padding-top: 4.5px;
  padding-bottom: 5px;
  display: none;
  z-index: 2;
  border-radius: 4px;
  user-select: none;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 14.5px;
}

.image-list-thumbnail {
  float: left;
  width: calc(50% - 0.5px);
  height: 60px;
  border-bottom: 1px solid #4e4b4b26;
  cursor: pointer;
  text-align: center;
  position: relative;
}

.image-list-thumbnail-image {
  position: absolute; top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  max-width: 100%;
  max-height: 100%
}

.image-list-thumbnail-color-overlay {
  position: absolute;
  width: calc(100% - 4px);
  height: 56px;
  display: none;
}

.image-list-thumbnail-default {
  border: 2px solid #0dc7ff;
  width: calc(100% - 4px);
  height: 56px;
}
/* ... */

